# moreonigiri-flow

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile
lang/: en_US.po  lang_generate.sh  lang_update.sh  ru.po
src/: CMakeLists.txt
src/logic/: CMakeLists.txt  afk.cpp  afk.hpp  afk_data.hpp  bank.cpp  bank.hpp  bank_data.hpp  clicker.cpp  clicker.hpp  clicker_data.hpp  clicker_upgrade.cpp  clicker_upgrade.hpp  decimal.hpp  emoji_fallback.hpp  enterprise.cpp  enterprise.hpp  enterprise_data.hpp  enterprise_tier_upgrade.cpp  enterprise_tier_upgrade.hpp  formal_id.hpp  frauds.cpp  frauds.hpp  frauds_data.hpp  game.cpp  game.hpp  game_data.hpp  merch.cpp  merch.hpp  serialization.hpp  tick.hpp  translation.hpp  types.hpp  upgrade.cpp  upgrade.hpp  upgrade_data.hpp  upgrade_list.cpp  upgrade_list.hpp
src/tests/: CMakeLists.txt  t_enterprise.cpp  t_frauds.cpp  t_game.cpp
